--- a/retroarch-core-options.cfg
+++ b/retroarch-core-options.cfg
@@ -7,7 +7,7 @@ gambatte_gb_colorization = "custom"
 mame2003-skip_disclaimer = "enabled"
 mame2003-dcs-speedhack = "enabled"
 mame2003-samples = "enabled"
-4do_high_resolution = "enabled"
+4do_high_resolution = "disabled"
 handy_rot = "None"
 fba-aspect = "DAR"
 fba-cpu-speed-adjust = "100"
@@ -286,47 +286,3 @@ mrboom-autofire = "OFF"
 prboom-resolution = "320x200"
 prboom-mouse_on = "disabled"
 dino_timer = "enabled"
-mupen64-gfxplugin = "rice"
-mupen64-gfxplugin-accuracy = "low"
-mupen64-screensize = "640x480"
-mame2003-frameskip = "0"
-mame2003-skip_warnings = "disabled"
-mame2003-sample_rate = "48000"
-mame2003-cheats = "disabled"
-mame2003-dialsharexy = "disabled"
-mame2003-mouse_device = "mouse"
-mame2003-rstick_to_btns = "enabled"
-mame2003-tate_mode = "disabled"
-fba-dipswitch-64street-Coin_A = "(Default) 1 Coin  1 Credits"
-fba-dipswitch-64street-Coin_B = "(Default) 1 Coin  1 Credits"
-fba-dipswitch-64street-Flip_Screen = "(Default) Off"
-fba-dipswitch-64street-Demo_Sounds = "(Default) On"
-fba-dipswitch-64street-Allow_Continue = "(Default) On"
-fba-dipswitch-64street-Difficulty = "(Default) Normal"
-fba-dipswitch-64street-Lives = "(Default) 3"
-fba-dipswitch-64street-Service_Mode = "(Default) Off"
-fba-dipswitch-aburner2-Coin_A = "(Default) 1 Coin  1 Credit"
-fba-dipswitch-aburner2-Coin_B = "(Default) 1 Coin  1 Credit"
-fba-dipswitch-aburner2-Cabinet_Type = "(Default) Upright 1"
-fba-dipswitch-aburner2-Throttle_Lever = "(Default) Yes"
-fba-dipswitch-aburner2-Lives = "(Default) 3"
-fba-dipswitch-aburner2-Ship_Increase = "(Default) Yes"
-fba-dipswitch-aburner2-Allow_Continue = "(Default) Yes"
-fba-dipswitch-aburner2-Difficulty = "(Default) Normal"
-fba-dipswitch-jojo-Region = "(Default) USA"
-fba-dipswitch-jojoba-Region = "(Default) Japan"
-fba-dipswitch-ms5pcb-Setting_mode = "(Default) Off"
-fba-dipswitch-ms5pcb-Coin_chutes = "(Default) 1"
-fba-dipswitch-ms5pcb-Coin_chutes_2 = "(Default) 2"
-fba-dipswitch-ms5pcb-Commmunicaton = "(Default) Disabled"
-fba-dipswitch-ms5pcb-Free_play = "(Default) Off"
-fba-dipswitch-ms5pcb-Stop_mode = "(Default) Off"
-fba-dipswitch-ms5pcb-Region = "(Default) Asia / Europe"
-fba-dipswitch-acrobatm-Demo_Sounds = "(Default) On"
-fba-dipswitch-acrobatm-Coin_B = "(Default) 1 Coin  1 Credits"
-fba-dipswitch-acrobatm-Coin_A = "(Default) 1 Coin  1 Credits"
-fba-dipswitch-acrobatm-Service_Mode = "(Default) Off"
-fba-dipswitch-acrobatm-Bonus_Life = "(Default) 100k and 100k"
-fba-dipswitch-acrobatm-Language = "(Default) English"
-fba-dipswitch-acrobatm-Difficulty = "(Default) Normal"
-fba-dipswitch-acrobatm-Lives = "(Default) 3"
